syntax = "proto3";

package arduino_trader.common;

import "common/common.proto";

// Position represents a portfolio position
message Position {
  string symbol = 1;
  string isin = 2;
  string name = 3;
  double quantity = 4;
  common.Money average_price = 5;
  common.Money current_price = 6;
  common.Money market_value = 7;
  common.Money cost_basis = 8;
  common.Money unrealized_pnl = 9;
  double unrealized_pnl_pct = 10;
  string account_id = 11;
  common.Timestamp last_updated = 12;
}

// List of positions
message PositionList {
  repeated Position positions = 1;
}
